fixed new speaker alignment, added favicon

--- a/static/website/css/main.css
+++ b/static/website/css/main.css
@@ -187,7 +187,7 @@ body {
     margin-top: 0;
 }
 #speakers .thumbnail {
-    height: 265px;
+    height: 250px;
 }
 #speakers hr {
     margin-top: 10px;
@@ -214,7 +214,7 @@ body {
     margin-top: 10px;
 }
 #twitter-widget-0 {
-    height: 265px;
+    height: 250px;
 }
 /* form section */
 .errorlist {
